--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,11 @@ p {
     margin-bottom: 0;
 }
 .header {border-bottom: 1px solid #e7e9fc;
-padding: 24px 0;}
+padding: 24px 0;
+box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 
+0px 1px 1px rgba(46, 47, 66, 0.16), 
+0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 .header-container {
     display: flex;
     align-items: center;
@@ -65,6 +69,28 @@ a  { text-decoration: none;}
         color: #2E2F42;
         padding: 24px 0;
         }
+.menu-first{
+    font-family: "Roboto", sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        color:#404bbf;
+        padding: 24px 0;
+        position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-first::after{
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+
+}
      .menu:hover,
      .menu:focus {color: #404bbf;}
      .add-list {
@@ -80,6 +106,7 @@ a  { text-decoration: none;}
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #434455;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 .mailtel:hover:hover,
 .mailtel:focus {color: #404bbf;}
