--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,14 @@ a  { text-decoration: none;}
 .mailtel:hover:hover,
 .mailtel:focus {color: #404bbf;}
 .solution {background-color: #2e2f42;
-    padding: 188px 0;}
+    padding: 188px 0;
+    margin: 0 auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 .main-solution {
     line-height: 1.07;
     font-family: Roboto;
@@ -138,6 +145,7 @@ a  { text-decoration: none;}
         border-radius: 4px;
         margin: 0 auto;
         padding: 16px 32px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     .button:hover,
     .button:focus{background-color: #404BBF;}
