--- a/css/styles.css
+++ b/css/styles.css
@@ -113,11 +113,13 @@ a  { text-decoration: none;}
 .solution {background-color: #2e2f42;
     padding: 188px 0;
     margin: 0 auto;
+    text-align: center;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .main-solution {
     line-height: 1.07;
