--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ a  { text-decoration: none;}
     }
 .mailtel:hover:hover,
 .mailtel:focus {color: #404bbf;}
-.solution {background-color: #2e2f42;
+.solution {
     padding: 188px 0;
     margin: 0 auto;
     text-align: center;
