--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ a  { text-decoration: none;}
     padding: 188px 0;
     margin: 0 auto;
     text-align: center;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),  url(../images/people.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
