--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,54 @@ margin-bottom: 72px;
     padding-left: 0; 
     margin: 0;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16), 
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.team-social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 24px;
+    padding-top: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.team-social-icons {
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.team-social-link {
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.team-icon {
+    fill: #f4f4fd;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.team-social-icons:focus {
+    fill: #4D5AE5;
+}
+.team-social-icons:hover {
+    fill: #404BBF;
+}
+.team-social-link:hover {
+    background-color: #404bbf;
+}
+.team-social-link:focus {
+    background-color: #404bbf;
 }
 .name-prof {
     padding: 32px 0;
