--- a/css/styles.css
+++ b/css/styles.css
@@ -326,11 +326,13 @@ margin-bottom: 72px;
             flex-wrap: wrap;
             column-gap: 24px;
             row-gap: 48px;
+            transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 .portfolio-foto {
     width: calc((100% - 48px) / 3);
     padding-left: 0; 
     margin: 0;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-foto:hover{
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
