--- a/css/styles.css
+++ b/css/styles.css
@@ -299,24 +299,6 @@ margin-bottom: 72px;
     padding: 32px 0;
     text-align: center;
 }
-.ground {background-color: #2e2f42;
-         padding: 100px 0;}
-.studi {font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #f4f4fd}
-    .parag {
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        color: #F4F4FD;
-        max-width: 264px;
-        }
         .our-portfolio {
             padding-top: 120px;
             padding-bottom: 120px;
@@ -368,16 +350,90 @@ margin-bottom: 72px;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-
 }
-.studi-logo {font-family: "Raleway", sans-serif;
+.footer {
+    background-color: #2e2f42;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 0px;
+    padding: 100px 0;
+  }
+  .advertisement {
+    background-color: #2e2f42;
+    color: #f4f4fd;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    max-width: 264px;
+  }
+  
+  .logo-footer {
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.17;
+    line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5;
-    display: inline-block;
+    font-family: "Raleway", sans-serif;
+    color: #4d5ae5;
+    text-decoration: none;
     margin-right: 76px;
-    margin-bottom: 16px}
+    display: inline-block;
+    margin-bottom: 16px;
+  }
+  .logo-footer-end {
+    color: #f4f4fd;
+    text-decoration: none;
+  }
+  .container-footer-link {
+    flex-direction: column;
+    align-items: center;
+  }
+  .social-media {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: white;
+    margin-bottom: 16px;
+    display: flex;
+  }
+  .footer-link-list {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    gap: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-link-items {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-icon {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer-soc-link {
+    fill: #f4f4fd;
+  }
+  .footer-icon:hover,
+  .footer-icon:focus {
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-container-logo {
+    margin-right: 120px;
+  }
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+  }
+
     
