--- a/css/styles.css
+++ b/css/styles.css
@@ -29,11 +29,9 @@ body {font-family: "Roboto",  sans-serif;
       color: #434455;
       background-color: #ffffff;}
 .container { 
-        max-width: 1158px;
-        padding-left: 15px;  
-        padding-right: 15px; 
-        margin-left: auto; 
-        margin-right: auto; 
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto; 
         }
 ul {list-style-type: none;
     padding-left: 0;
