--- a/css/styles.css
+++ b/css/styles.css
@@ -250,12 +250,9 @@ margin-bottom: 72px;
 }
 .team-social {
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: row;
     gap: 24px;
-    padding-top: 8px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    margin-top: 8px;
 }
 .team-social-icons {
     background-color: #4d5ae5;
